--- a/laporan.html
+++ b/laporan.html
@@ -5,26 +5,104 @@
   <title>Laporan</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
-    body { margin: 0; font-family: Arial, sans-serif; background: #f4f7f9; text-align: center; }
-    header { background: #4CAF50; color: white; padding: 15px; font-size: 20px; font-weight: bold; }
-    .container { padding: 30px; }
-    .btn { display: block; width: 90%; max-width: 400px; margin: 10px auto; padding: 15px; font-size: 16px; font-weight: bold; border: none; border-radius: 10px; background: #3498db; color: white; cursor: pointer; box-shadow: 0 4px 6px rgba(0,0,0,0.2); transition: 0.2s; text-align:left; }
-    .btn:hover { background: #2980b9; transform: scale(1.03); }
-    footer { background: #333; color: white; text-align: center; padding: 10px; margin-top: 40px; }
+    body { 
+      margin: 0; 
+      font-family: "Segoe UI", Arial, sans-serif; 
+      background: #f4f7f9; 
+      color: #333; 
+    }
+    header { 
+      background: #2c3e50; 
+      color: white; 
+      padding: 15px 20px; 
+      font-size: 20px; 
+      font-weight: bold; 
+      text-align: left; 
+      box-shadow: 0 2px 6px rgba(0,0,0,0.15);
+    }
+    .container { 
+      padding: 25px; 
+      max-width: 800px; 
+      margin: auto;
+    }
+    .btn { 
+      display: block; 
+      width: 100%; 
+      margin: 10px 0; 
+      padding: 15px; 
+      font-size: 16px; 
+      font-weight: 600; 
+      border: none; 
+      border-radius: 10px; 
+      background: #3498db; 
+      color: white; 
+      cursor: pointer; 
+      box-shadow: 0 3px 6px rgba(0,0,0,0.15); 
+      transition: 0.2s; 
+      text-align:left; 
+    }
+    .btn:hover { 
+      background: #2980b9; 
+      transform: translateX(5px);
+    }
+    footer { 
+      background: #2c3e50; 
+      color: white; 
+      text-align: center; 
+      padding: 12px; 
+      margin-top: 40px; 
+      font-size: 14px; 
+    }
+    /* Modal */
+    #detailModal { 
+      display:none; 
+      position:fixed; 
+      top:0; left:0; right:0; bottom:0; 
+      background:rgba(0,0,0,0.6); 
+      align-items:center; 
+      justify-content:center; 
+    }
+    #detailModal .content { 
+      background:#fff; 
+      padding:20px; 
+      border-radius:10px; 
+      max-width:500px; 
+      width:90%; 
+      max-height:90%; 
+      overflow:auto; 
+    }
+    #detailModal h3 { 
+      margin-top:0; 
+      color:#2c3e50; 
+    }
+    #detailStruk { 
+      background:#f4f4f4;
+      padding:12px; 
+      border-radius:8px; 
+      font-family: monospace; 
+      font-size: 14px; 
+      white-space: pre-wrap; 
+      text-align: left;
+    }
+    .btn-small {
+      padding:10px;
+      font-size:14px;
+      margin-top:10px;
+    }
   </style>
 </head>
 <body>
-  <header>Menu Laporan</header>
+  <header>📊 Laporan Transaksi</header>
   <div class="container" id="laporanContainer"></div>
   <footer>Copyright © 2025 MyKasir</footer>
 
   <!-- Modal detail -->
-  <div id="detailModal" style="display:none;position:fixed;top:0;left:0;right:0;bottom:0;background:rgba(0,0,0,0.6);align-items:center;justify-content:center;">
-    <div style="background:#fff;padding:20px;border-radius:10px;max-width:400px;width:90%;max-height:90%;overflow:auto;">
+  <div id="detailModal">
+    <div class="content">
       <h3>Detail Transaksi</h3>
-      <pre id="detailStruk" style="background:#f4f4f4;padding:10px;border-radius:8px;"></pre>
-      <button class="btn" onclick="rePrint()">🖨 Print Ulang</button>
-      <button class="btn" style="background:#999" onclick="closeDetail()">Tutup</button>
+      <pre id="detailStruk"></pre>
+      <button class="btn btn-small" onclick="rePrint()">🖨 Print Ulang</button>
+      <button class="btn btn-small" style="background:#999" onclick="closeDetail()">Tutup</button>
     </div>
   </div>
 
@@ -36,13 +114,13 @@
       let container = document.getElementById("laporanContainer");
       container.innerHTML = "";
       if(laporan.length === 0){
-        container.innerHTML = "<p>Belum ada transaksi tersimpan.</p>";
+        container.innerHTML = "<p style='color:#666;'>Belum ada transaksi tersimpan.</p>";
         return;
       }
       laporan.slice().reverse().forEach((l)=>{
         let div=document.createElement("button");
         div.className="btn";
-        div.innerText=`${l.waktu} | Total: Rp${l.total}`;
+        div.innerText=`📅 ${l.waktu}   |   💰 Rp${l.total}`;
         div.onclick=()=>showDetail(l);
         container.appendChild(div);
       });
